# aoc

./: .gitignore
2021/day1/: day1_part1.py  day1_part2.py
2021/day2/: go.mod
2021/day4/: go.mod
2022/: .gitignore
2022/aoc/: Cargo.toml
2022/aoc/src/: api.rs  input.rs  lib.rs  puzzle.rs
2025/: build.zig  build.zig.zon
2025/day1/part1/: build.zig  build.zig.zon
2025/day1/part1/src/: main.zig
2025/day1/part2/: build.zig  build.zig.zon
2025/day1/part2/src/: main.zig
2025/day2/: build.zig  build.zig.zon
2025/day2/src/: part1.zig  part2.zig
2025/day3/: part1.zig  part2.zig
2025/day4/: part1.zig
core/: go.mod  problem.go  solver.go
day2/: day2_part1.go
day3/: diagnostic.go  go.mod
day4/: bingo.go
day5/: go.mod  go.sum  hydrothermalvents.go
day6/: go.mod  lanternfish.go
