[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.0"
